crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_compatibility_report_cpu_simd.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: report.summary()
---
CPU SIMD (AVX2) (CPU SIMD): READY — 3/3 required ops supported
