crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_conv2d_config_3x3.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: config
---
Conv2dConfig {
    in_channels: 3,
    out_channels: 16,
    kernel_h: 3,
    kernel_w: 3,
    stride_h: 1,
    stride_w: 1,
    padding_h: 0,
    padding_w: 0,
    dilation_h: 1,
    dilation_w: 1,
    groups: 1,
}
