crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_conv2d_config_default.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: config
---
Conv2dConfig {
    in_channels: 1,
    out_channels: 1,
    kernel_h: 1,
    kernel_w: 1,
    stride_h: 1,
    stride_w: 1,
    padding_h: 0,
    padding_w: 0,
    dilation_h: 1,
    dilation_w: 1,
    groups: 1,
}
