crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_conv2d_output_size_basic.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: "format!(\"input=28, kernel=3, stride=1, pad=0, dil=1 -> {out}\")"
---
input=28, kernel=3, stride=1, pad=0, dil=1 -> 26
