crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_cpu_attention_config.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: config
---
CpuAttentionConfig {
    batch_size: 2,
    num_heads: 4,
    seq_len: 16,
    head_dim: 64,
    scale: None,
    causal_mask: true,
}
