crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_cpu_attention_zero_batch_error.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: err.to_string()
---
Kernel error: Invalid arguments: batch_size must be > 0
