crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_cpu_embedding_config_with_options.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: config
---
CpuEmbeddingConfig {
    vocab_size: 50000,
    embed_dim: 512,
    padding_idx: Some(
        0,
    ),
    max_norm: Some(
        1.0,
    ),
}
