crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_device_capability_matrix_default.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: matrix
---
DeviceCapabilityMatrix {
    profiles: [],
}
