crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_device_class_display_all.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: display
---
[
    "Intel Arc",
    "Intel Xe",
    "NVIDIA CUDA",
    "AMD ROCm",
    "Apple Metal",
    "CPU SIMD",
    "CPU Scalar",
    "WebGPU",
]
